--- a/components/foo/index.html
+++ b/components/foo/index.html
@@ -29,7 +29,7 @@
         );
       })();
     </script>
-    <title>oneboot-site</title>
+    <title>Foo</title>
   </head>
   <body>
     <div id="root"></div>
